Code improvements Discussion: https://github.com/cryptomator/integrations-linux/pull/18